--- a/yaml/jenkins-persistent-template.yaml
+++ b/yaml/jenkins-persistent-template.yaml
@@ -136,7 +136,7 @@ objects:
         volumes:
         - name: "${JENKINS_SERVICE_NAME}-data"
           persistentVolumeClaim:
-            claimName: "${JENKINS_SERVICE_NAME}"
+            claimName: "${JENKINS_SERVICE_NAME}-data"
     triggers:
     - imageChangeParams:
         automatic: true
