Update jenkins pipeline

--- a/yaml/jenkins-pipeline.yaml
+++ b/yaml/jenkins-pipeline.yaml
@@ -108,7 +108,7 @@ objects:
     labels:
       app: cicd-pipeline
       name: cicd-pipeline
-    name: tasks-pipeline
+    name: sample-pipeline
   spec:
     triggers:
       - type: ConfigChange
